--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	<title>Flabby Box</title>
+	<title>flabbybox</title>
 	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
